--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/apecr/notes-node#readme",
   "dependencies": {
     "lodash": "^4.17.5",
+    "pisco-callback-to-promise": "^0.1.11",
     "yargs": "^4.7.1"
   }
 }
